--- a/resources/lang/cs/kapitoly/00-cs.md
+++ b/resources/lang/cs/kapitoly/00-cs.md
@@ -1,8 +1,8 @@
 # Laravel tahák
-![Front page of Laravel cheat sheet](../../resources/img/frontpage.jpg)
+![Front page of Laravel cheat sheet](/resources/img/frontpage.jpg)
 
 ## Základy
-2. [View](./resources/chapters/01-view.md)
+2. [View](/resources/lang/cs/kapitoly/02-view.md)
 
 ## Jazyky
 - [English](/README.md)
